# ccat

./: pyproject.toml  readme  readme.md
ccat/: 0-about-fonts.txt
ccat/kjv/Apocrypha/: 1Esdr_KJV.txt  1Macc_KJV.txt  2Macc_KJV.txt  4Ezra_KJV.txt  Add_Esth_KJV.txt  Baruch_KJV.txt  Bel_KJV.txt  Ep_Jer_KJV.txt  (+7 more)
ccat/mbhs/: 000.ReadMe  001.ReadMe.mbhs  002.MichiganManual  003.WTS_Supplement
ccat/parallel/: 01.Genesis.par  02.Exodus.par  03.Lev.par  04.Num.par  05.Deut.par  06.JoshB.par  11.1Sam.par  15.1Chron.par  17.1Esdras.par  18.Esther.par  19.Neh.par  20.Psalms.par  22.Ps151.par  26.Job.par  27.Sirach.par  33.Obadiah.par  40.Isaiah.par  43.Lam.par  44.Ezekiel.par  45.DanielOG.par  46.DanielTh.par
ccat/parallel_unicode/: 01.Genesis.json  02.Exodus.json  03.Lev.json  04.Num.json  05.Deut.json  06.JoshB.json  07.JoshA.json  08.JudgesB.json  09.JudgesA.json  10.Ruth.json  11.1Sam.json  12.2Sam.json  13.1Kings.json  14.2Kings.json  15.1Chron.json  16.2Chron.json  17.1Esdras.json  18.Esther.json  18.Ezra.json  19.Neh.json  20.Psalms.json  22.Ps151.json  23.Prov.json  24.Qoh.json  25.Cant.json  26.Job.json  27.Sirach.json  28.Hosea.json  29.Micah.json  30.Amos.json  31.Joel.json  32.Jonah.json  33.Obadiah.json  34.Nahum.json  35.Hab.json  36.Zeph.json  37.Haggai.json  38.Zech.json  39.Malachi.json  40.Isaiah.json  (+6 more)
ccat/pseudep/: ParaleipomenaJeremiou.English  ParaleipomenaJeremiou.Greek
src/: clone_http_repository.py  code_test.ipynb  parallel_betacode.py  requirement.txt
src/parallel_betacode/: parallel_betacode.py
src/tests/: test_parallel_betacode.py
(+69 files in other folders)
